[gd_scene load_steps=3 format=3 uid="uid://dqoq3miv3jfjd"]

[ext_resource type="Script" uid="uid://dwj87rlggvls5" path="res://scripts/FishSelectionUI.gd" id="1_6ablg"]
[ext_resource type="FontFile" uid="uid://bpr71paph0c0t" path="res://fonts/VCR_OSD_MONO_1.001.ttf" id="2_7uxpq"]

[node name="FishSelectionUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_6ablg")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_fonts/font = ExtResource("2_7uxpq")
theme_override_font_sizes/font_size = 24
text = "CHOOSE_FISH"
horizontal_alignment = 1

[node name="SearchBar" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7uxpq")
placeholder_text = "SEARCH"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_vertical = 3

[node name="FishList" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7uxpq")
text = "CANCEL"
